--- a/INSTAPDD/index.html
+++ b/INSTAPDD/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+  <link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#00416A">
+
+<script>
+  if ("serviceWorker" in navigator) {
+    navigator.serviceWorker.register("service-worker.js");
+  }
+</script>
+
   <meta charset="UTF-8"/>
   <title>PROVSOFT – Bookit</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
