--- a/INSTAPDD/viewer.html
+++ b/INSTAPDD/viewer.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8"/>
+  <link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#00416A">
+
+<script>
+  if ("serviceWorker" in navigator) {
+    navigator.serviceWorker.register("service-worker.js");
+  }
+</script>
+
+  meta charset="UTF-8"/>
   <title>BOOKIT – Diario Visual</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
