--- a/INSTAPDD/viewer.html
+++ b/INSTAPDD/viewer.html
@@ -134,6 +134,18 @@
         font-size: 16px;
       }
     }
+/* ====== TARJETAS ESPECIALES: SERGIO AGUAYO ====== */
+.alert-sergio {
+  border: 4px solid red !important;
+  animation: blink-sergio 1s infinite !important;
+}
+
+@keyframes blink-sergio {
+  0% { box-shadow: 0 0 8px red; }
+  50% { box-shadow: 0 0 25px red; }
+  100% { box-shadow: 0 0 8px red; }
+}
+
   </style>
 </head>
 
@@ -229,7 +241,14 @@ function addImage(item) {
   const fecha = new Date(item.created_at).toLocaleString();
 
   const div = document.createElement("div");
-  div.className = "grid-item";
+  let extraClass = "";
+
+if (item.relation && item.relation.toUpperCase() === "SERGIO AGUAYO") {
+  extraClass = "alert-sergio";
+}
+
+div.className = "grid-item " + extraClass;
+
 
   div.innerHTML = `
       <img src="${url}" onclick="downloadImage('${url}')">
