--- a/INSTAPDD/viewer.html
+++ b/INSTAPDD/viewer.html
@@ -10,7 +10,7 @@
   }
 </script>
 
-  meta charset="UTF-8"/>
+  <meta charset="UTF-8"/>
   <title>BOOKIT – Diario Visual</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
