--- a/INSTAPDD/viewer.html
+++ b/INSTAPDD/viewer.html
@@ -33,7 +33,7 @@
       z-index: 10;
     }
 
-    select, input {
+    select {
       padding: 10px;
       width: 100%;
       margin-bottom: 10px;
@@ -42,7 +42,6 @@
       font-size: 14px;
     }
 
-    /* ====== GRID DESKTOP ====== */
     .grid {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
@@ -109,7 +108,6 @@
       opacity: 1;
     }
 
-    /* ====== RESPONSIVE CELULAR ====== */
     @media (max-width: 768px) {
       .grid {
         grid-template-columns: 1fr;
@@ -134,7 +132,7 @@
         font-size: 16px;
       }
     }
-/* ====== TARJETAS ESPECIALES: SERGIO AGUAYO ====== */
+
 .alert-sergio {
   border: 4px solid red !important;
   animation: blink-sergio 1s infinite !important;
@@ -155,9 +153,6 @@
   <select id="relationFilter">
     <option value="">🔎 Filtrar por relación</option>
   </select>
-
-  <input type="date" id="startDate">
-  <input type="date" id="endDate">
 </div>
 
 <div id="gallery" class="grid"></div>
@@ -211,12 +206,7 @@ async function loadMore(reset = false) {
     .range(start, end);
 
   const rel = document.getElementById("relationFilter").value;
-  const d1 = document.getElementById("startDate").value;
-  const d2 = document.getElementById("endDate").value;
-
   if (rel) q = q.eq("relation", rel);
-  if (d1) q = q.gte("created_at", d1);
-  if (d2) q = q.lte("created_at", d2 + " 23:59:59");
 
   const { data } = await q;
 
@@ -227,7 +217,7 @@ async function loadMore(reset = false) {
 }
 
 /* ===============================
-   AGREGAR IMAGEN AL GRID
+   AGREGAR IMAGEN
 =============================== */
 function addImage(item) {
   const gallery = document.getElementById("gallery");
@@ -237,18 +227,16 @@ function addImage(item) {
     .getPublicUrl(item.image_url);
 
   const url = publicUrlData.publicUrl + "?v=" + Date.now();
-
   const fecha = new Date(item.created_at).toLocaleString();
 
   const div = document.createElement("div");
+
   let extraClass = "";
+  if (item.relation && item.relation.toUpperCase() === "SERGIO AGUAYO") {
+    extraClass = "alert-sergio";
+  }
 
-if (item.relation && item.relation.toUpperCase() === "SERGIO AGUAYO") {
-  extraClass = "alert-sergio";
-}
-
-div.className = "grid-item " + extraClass;
-
+  div.className = "grid-item " + extraClass;
 
   div.innerHTML = `
       <img src="${url}" onclick="downloadImage('${url}')">
@@ -265,9 +253,6 @@ div.className = "grid-item " + extraClass;
   gallery.appendChild(div);
 }
 
-/* ===============================
-   DESCARGAR IMAGEN AL CLICK
-=============================== */
 function downloadImage(url) {
   const a = document.createElement("a");
   a.href = url;
@@ -275,9 +260,6 @@ function downloadImage(url) {
   a.click();
 }
 
-/* ===============================
-   BORRAR IMAGEN
-=============================== */
 async function deleteImage(id, path, ev) {
   ev.stopPropagation();
 
@@ -296,8 +278,6 @@ async function deleteImage(id, path, ev) {
    EVENTOS
 =============================== */
 relationFilter.onchange = () => loadMore(true);
-startDate.onchange = () => loadMore(true);
-endDate.onchange = () => loadMore(true);
 
 window.onscroll = () => {
   if (window.innerHeight + window.scrollY >= document.body.offsetHeight - 200) {
