--- a/INSTAPDD/viewer.html
+++ b/INSTAPDD/viewer.html
@@ -143,6 +143,16 @@
   50% { box-shadow: 0 0 25px red; }
   100% { box-shadow: 0 0 8px red; }
 }
+.alert-pago {
+  border: 4px solid #7b00ff !important;
+  animation: blink-pago 1s infinite !important;
+}
+
+@keyframes blink-pago {
+  0% { box-shadow: 0 0 8px #7b00ff; }
+  50% { box-shadow: 0 0 25px #d28bff; }
+  100% { box-shadow: 0 0 8px #7b00ff; }
+}
 
   </style>
 </head>
@@ -232,9 +242,17 @@ function addImage(item) {
   const div = document.createElement("div");
 
   let extraClass = "";
-  if (item.relation && item.relation.toUpperCase() === "SERGIO AGUAYO") {
-    extraClass = "alert-sergio";
-  }
+
+// 🔴 Sergio Aguayo (rojo parpadeante)
+if (item.relation && item.relation.toUpperCase() === "SERGIO AGUAYO") {
+  extraClass = "alert-sergio";
+}
+
+// 🟣 Pago (morado parpadeante)
+if (item.relation && item.relation.toUpperCase().includes("PAGO")) {
+  extraClass = "alert-pago";
+}
+
 
   div.className = "grid-item " + extraClass;
 
